ccg-demo/force-app/main/default/objects/Contact/fields/Last_Portal_Login__c.field-meta.xml
<CustomField>
    <fullName>Last_Portal_Login__c</fullName>
    <label>Last Portal Login</label>
    <type>DateTime</type>
</CustomField>