ccg-demo/force-app/main/default/objects/Contact/fields/Latest_PHQ9_Score__c.field-meta.xml
<CustomField>
    <fullName>Latest_PHQ9_Score__c</fullName>
    <label>Latest PHQ-9 Score</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>