ccg-demo/force-app/main/default/objects/Contact/fields/Next_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Next_Appointment__c</fullName>
    <label>Next Appointment</label>
    <type>DateTime</type>
</CustomField>