ccg-demo/force-app/main/default/objects/Contact/fields/Primary_Clinician__c.field-meta.xml
<CustomField>
    <fullName>Primary_Clinician__c</fullName>
    <label>Primary Clinician</label>
    <type>Text</type>
    <length>120</length>
</CustomField>