ccg-demo/force-app/main/default/objects/Contact/fields/Primary_Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Primary_Diagnosis__c</fullName>
    <label>Primary Diagnosis</label>
    <type>Text</type>
    <length>120</length>
</CustomField>